#22 - Add getting started documentation * Add getting started documentation to base.less file. * Fix nav hover color and update spacings for menu items for sg-Nav. * Remove the hardcoded style guide section overview.

--- a/src/styleguide/kss-assets/css/styleguide-custom.css
+++ b/src/styleguide/kss-assets/css/styleguide-custom.css
@@ -218,6 +218,16 @@ body {
     justify-content: flex-end;
 }
 
+[sg-Nav] ul li {
+    display: flex;
+    align-items: center;
+}
+
+[sg-Nav] ul li a {
+    padding: 12px 16px !important;
+    margin-left: 8px;
+}
+
 [sg-Hero] {
     box-sizing: border-box;
     margin: 0;
